<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation" >
    <string name="login_confireuser">请填写账号</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="dict">词典</string>
    <string name="inserting_coil_notification">下线通知</string>
    <string name="pay_encourage">赞赏支持</string>
    <string name="refresh">刷新</string>
    <string name="next_step">下一步</string>
    <string name="new_account_register">新用户注册</string>
    <string name="verify_code_hassend">验证码已发送至</string>
    <string name="plus_please_check_receive">,请查收</string>
    <string name="login_pwd">登录密码</string>
    <string name="register_sucess">注册成功</string>
    <string name="you_have_no_compny">您暂无企业</string>
    <string name="phone_mail_cant_not_null">手机号码或者邮箱不能为空</string>
    <string name="phone_mail_format_error">当前手机号码或者邮箱格式不正确</string>
    <string name="cannot_receive_sms">收不到短信验证码?</string>
    <string name="resend_sms">重发短信</string>
    <string name="get_validatecode">获取验证码</string>
    <string name="check_no_input">请检查未填项</string>
    <string name="pwd_format_is_error">密码格式错误,长度为6–18位,必须包含字母、数字、符号中的两种</string>
    <string name="verify_code_no_complete">验证码位数不正确</string>
    <string name="message_server">消息服务器</string>
    <string name="port">端口号</string>
    <string name="notice">提示</string>
    <string name="name">姓名</string>
    <string name="setting">设置</string>
    <string name="delete">"删除"</string>
    <string name="resend_validate_code">重新获取验证码</string>
    <string name="no_data_show">没有数据显示</string>
    <string name="navigationbarbean_titletext_textsize">18</string>
    <string name="navigationbarbean_arrowtext_padding">5</string>
    <string name="navigationbarbean_buttontext_textsize">18</string>
    <string name="navigationbarbean_onlyimage_padding">5</string>
    <string name="navigationbarbean_onlytext_padding">5</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="get_identifying_code">获取验证码</string>
    <string name="input_phone_mail">输入手机号码\\邮箱</string>
    <string name="register_newuser">新用户注册</string>
    <string name="use_immediately">立即使用</string>
    <string name="register_complete">注册完成</string>
    <string name="login_input_pwd">登录密码(6-18位至少为数字/字母/符号中2种组合)</string>
    <string name="username_has_exit">用户名已经存在！</string>
    <string name="username_cannot_null">姓名不能为空！</string>
    <string name="connet_server_error">请求服务器响应失败</string>
    <string name="str_default_share">默认</string>
    <string name="str_audio_share">音乐分享</string>
    <string name="str_image_share">纯图分享</string>
    <string name="str_app_share">应用分享</string>
    <string name="str_image_text_share">分享</string>
    <string name="str_publish_mood">说说</string>
    <string name="str_publish_video">视频</string>
    <string name="str_share_type">内容类型: </string>
    <string name="share_prize_id">活动id</string>
    <string name="share_prize_id_hint">填写活动id，不能为空</string>
    <string name="special_qzone_action">QQ空间: </string>
    <string name="default_qzone_dialog">Qzone弹窗</string>
    <string name="qzone_item_hide">Qzone隐藏</string>
    <string name="qqshare_title_hint">input title</string>
    <string name="qqshare_title_content">腾讯新闻分享标题</string>
    <string name="qqshare_summary_hint">input summary</string>
    <string name="qqshare_summary_content">新闻分享摘要内容,这里是QQ分享摘要测试, 字数不够? 再加点?</string>
    <string name="qqshare_audio_url_lable">audio url</string>
    <string name="qqshare_audioUrl_hint">input music url</string>
    <string name="qqshare_audioUrl_content">http://mr3.douban.com/201307291529/13a106d9b49a9a8446fd3c18f77dc395/view/song/small/p8508.mp3</string>
    <string name="qqshare_targetUrl_lable">targetUrl</string>
    <string name="qqshare_targetUrl_hint">input target url</string>
    <string name="qqshare_targetUrl_content">http://www.qq.com/</string>
    <string name="qqshare_imageUrl_hint">input image url</string>
    <string name="qqshare_appName_lable">app name</string>
    <string name="qqshare_ark_lable">ARK JSON串（选填）</string>
    <string name="qqshare_appName_hint">input app name</string>
    <string name="qqshare_appName_content">测试应用</string>
    <string name="qqshare_ark_content">	{"app":"com.tencent.music","view":"Share","meta":{"Share":{"musicId":"4893051"}}}</string>
    <string name="qzoneshare_title_content">空间分享测试</string>
    <string name="qzoneshare_summary_content">分享生活留住感动分享生活留住感动分享生活留住感动分享生活留住感动分享生活留住感动分享生活留住感动</string>
    <string name="str_image_local">本地图片</string>
    <string name="str_image_net">网络图片</string>
    <string name="qqshare_imageUrl_lable">imageUrl</string>
    <string name="publish_videoPath_lable">videoPath</string>
    <string name="qqshare_imageUrl_content">http://inews.gtimg.com/newsapp_bt/0/876781763/1000</string>
    <string name="qqconnect_enter_tartget_mini_app_id_tip">请输入小程序/小游戏参数</string>
    <string name="qqconnect_mini_app_id_empty">小程序ID为空</string>
    <string name="qqconnect_mini_app_id_not_digit">小程序ID为非数字</string>
    <string name="qqconnect_mini_app_version_wrong">小程序版本有误</string>
    <string name="qqconnect_mini_app_id_tip">请输入ID</string>
    <string name="qqconnect_mini_app_path_tip">请输入路径(参数错误默认打开首页)</string>
    <string name="qqconnect_mini_app_version_tip">请输入版本(develop/trial/release)</string>
    <string name="please_click_login_btn">请点击登录</string>
    <string name="str_album_list">相册列表</string>
    <string name="str_photo_list">照片列表</string>
    <string name="str_add_album">创建相册</string>
    <string name="str_upload_photo">上传照片</string>
    <string name="app_main_login">登陆</string>
    <string name="app_main_api">API</string>
    <string name="app_main_qq_share">QQ分享(无需登录)</string>
    <string name="app_main_qzon_share">QZone(无需登录)</string>
    <string name="app_main_social_api">社交API</string>
    <string name="app_main_is_support_sso_login">是否支持SSO登陆</string>
    <string name="app_main_get_user_info">获取用户资料API</string>
    <string name="app_get_unionid">获取app unionid</string>
    <string name="app_main_add_friend_in_game">加好友</string>
    <string name="app_main_set_avatar">设置头像</string>
    <string name="app_main_set_emotion">设置表情</string>
    <string name="app_main_texting">聊天</string>
    <string name="app_main_audio_chat">语音</string>
    <string name="app_main_video_chat">视频</string>
    <string name="app_main_visit_qzone_gallery">访问空间相册</string>
    <string name="app_main_wap">临时会话状态API(无需登陆)</string>
    <string name="app_main_weiyun">微云</string>
    <string name="app_main_others">其他API</string>
    <string name="app_main_appbar">应用吧API</string>
    <string name="app_main_qqgroupp_api">群API</string>
    <string name="app_main_is_qq_installed">是否安装QQ</string>
    <string name="app_main_mini_app">小程序/小游戏</string>
    <string name="app_main_jump_mini_app">唤起主体小程序/小游戏</string>
    <string name="app_main_jump_mini_app_not_privilege">唤起主体小程序/小游戏(未授权能力)</string>
    <string name="applet_secimg_title">填写验证码</string>
    <string name="applet_secimg_change">换一张图片</string>
    <string name="applet_seccode_tip">验证码不能为空</string>
    <string name="applet_seccode_fail_tip">验证码错误，请重新输入</string>
    <string name="confirm">确定</string>
    <string name="other">其他</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Sdk_Sample</string>
    <string name="invite_dialog_tittle">请输入Invite参数</string>
    <string name="story_dialog_tittle">请输入story参数</string>
    <string name="pk_brag_dialog_tittle">请输入挑战炫耀参数</string>
    <string name="ask_gift_dialog_tittle">请输入请求礼物参数</string>
    <string name="grade_dialog_tittle">请输入应用评价参数</string>
    <string name="grade_msg_hint">默认提示文字</string>
    <string name="grade_msg_hint_hint">亲，给个好评吧！</string>
    <string name="source">source:</string>
    <string name="source_hint">Input Source</string>
    <string name="picurl">picurl:</string>
    <string name="picurl_hint">Input Picture Url</string>
    <string name="desc">desc:</string>
    <string name="desc_hint">Input description</string>
    <string name="commit">Commit</string>
    <string name="use_default">Use Default</string>
    <string name="act">act:</string>
    <string name="act1">进入应用</string>
    <string name="act2">领取奖励</string>
    <string name="act3">获取能量:</string>
    <string name="act4">帮助TA</string>
    <string name="options">act:</string>
    <string name="options1">挑战</string>
    <string name="options2">炫耀</string>
    <string name="choice">act:</string>
    <string name="choice1">request</string>
    <string name="choice2">freegift</string>
    <string name="ask_gift_only">act:</string>
    <string name="ask_gift_only1">0</string>
    <string name="ask_gift_only2">1</string>
    <string name="pics">pics:</string>
    <string name="pics_hint">Input pics url</string>
    <string name="title">title:</string>
    <string name="title_hint">Input story title</string>
    <string name="description">description:</string>
    <string name="description_hint">Input description</string>
    <string name="img">img:</string>
    <string name="img_hint">请输入图片URL</string>
    <string name="recimg">recimg:</string>
    <string name="recimg_hint">请输入发送者获得礼物图片URL</string>
    <string name="recimg_desc">recimg desc:</string>
    <string name="recimg_desc_hint">请输入发送者获得礼物图片描述</string>
    <string name="msg">msg:</string>
    <string name="msg_hint">请输入msg</string>
    <string name="summary">summary:</string>
    <string name="targetUrl">targetUrl:</string>
    <string name="targetUrl_hint">Input targetUrl</string>
    <string name="summary_hint">Input summary</string>
    <string name="type">type:</string>
    <string name="type_hint">Input type</string>
    <string name="url">url:</string>
    <string name="url_hint">Input url</string>
    <string name="playurl">playurl:</string>
    <string name="playurl_hint">Input playurl</string>
    <string name="openid_hint">Input openid</string>
    <string name="openid">receiver:</string>
    <string name="add_openid">click to add</string>
    <string name="title_activity_return">ReturnActivity</string>
    <string name="title_activity_auth">授权</string>
    <string name="cancel">取消</string>
    <string name="catelog">分类</string>
    <string name="wait_dict_init_please">请等待字典加载完成</string>
    <string name="wait_dict_init_enter_please">首次加载缓慢,加载完后自动打开请等待</string>
    <string name="dict_init_error">初始化词典数据失败</string>
    <string name="laboratory_yueyu">粤语实验室</string>
    <string name="feedback">反馈吐槽</string>
    <string name="websearch">网页查询</string>
    <string name="developingtite">开发中</string>
    <string name="user_private">用户隐私协议</string>
    <string name="develop_setting">开发者选项</string>
    <string name="developing">正在开发中。。。</string>
    <string name="click_play_music">点击播放歌曲</string>
    <string name="unknown">未知</string>
    <string name="radom_yuyu_music">随机粤语歌曲</string>
    <string name="next_music">切歌</string>
    <string name="change_theme">修改主题</string>
    <string name="share_lange_app">分享APP到微信</string>
    <string name="search_null">搜索结果为空</string>
    <string name="search">搜索</string>
    <string name="about">粤语开发词典只用于android 开发粤语交流，不用于盈利。必须遵守Apache开源协议</string>
    <string name="notice_yy">资料来自粤语学习网</string>
    <string name="no_data">没有数据</string>
    <string name="yy_web">粤语开放平台网页</string>
    <string name="yp_sm">声母</string>
    <string name="yp_ym">韵母</string>
    <string name="yp_sd">声调</string>
    <string name="about_title">关于</string>
    <string name="common_title">词典</string>
    <string name="today_staduy">今天已学</string>
    <string name="yesday_book">昨日已学</string>
    <string name="app_home_link">官网</string>
    <string name="start_percent">学习进度</string>
    <string name="startLearn">开始学习</string>
    <string name="translate">翻译</string>
    <string name="change">切换</string>
    <string name="sentence">例句</string>
    <string name="init_sentence">重新导入例句</string>
</resources>