<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_login"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <com.easysoft.widget.statusview.SoftKeyBoardSatusView
        android:id="@+id/login_soft_status_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/setting"/>

            <ImageView
                android:id="@+id/btnSetting"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <com.easysoft.widget.imgeview.MultiShapeView
            app:shape="circle"

            android:id="@+id/ivUserIcon"
            android:layout_width="114dp"
            android:layout_height="114dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_login_default_user"
            android:layout_marginTop="10dp"/>

        <RelativeLayout
            android:layout_width="270dp"
            android:layout_height="38.4dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dip"
            android:background="@drawable/bg_input_account_and_password_login">

            <ImageView
                android:id="@+id/imge_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_login_account" />

            <com.easysoft.widget.edittextview.BoundEditText
                android:id="@+id/et_login_uername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dip"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_toRightOf="@id/imge_user"
                android:layout_toEndOf="@id/imge_user"
                android:background="@null"
                android:drawableRight="@drawable/btn_login_clear"
                android:drawableEnd="@drawable/btn_login_clear"
                android:focusableInTouchMode="true"
                android:gravity="bottom"
                android:hint="@string/login_confireuser"
                android:singleLine="true"
                android:textColor="@color/login_edittext_txt"
                android:textColorHint="@color/colorLightGray"
                android:textSize="17sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="270dp"
            android:layout_height="38.4dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_input_account_and_password_login">

            <ImageView
                android:id="@+id/imge_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_login_password" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imge_pwd"
                android:layout_toEndOf="@id/imge_pwd"
                android:layout_centerVertical="true"
                android:layout_marginBottom="8dp">

                <com.easysoft.widget.edittextview.BoundEditText
                    android:id="@+id/et_login_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="10dip"
                    android:layout_toRightOf="@id/imge_pwd"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawableRight="@drawable/btn_login_clear"
                    android:focusableInTouchMode="true"
                    android:hint="@string/input_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/login_edittext_txt"
                    android:textColorHint="@color/colorLightGray"
                    android:textSize="17sp"
                    android:imeOptions="actionDone"/>

                <RelativeLayout
                    android:id="@+id/layoutChangeshow"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" >

                    <ImageView
                        android:id="@+id/mIvVisualized"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_login_visualized" />

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="270dp"
            android:layout_height="40dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="25.0dip"
            android:background="@drawable/bg_btn_login_login"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/common_bt_unable_text_color"
            android:textSize="17sp" />

        <RelativeLayout
            android:layout_width="270dp"
            android:layout_height="50dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mTvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@color/transparent"
                android:text="@string/new_account_register"
                android:textColor="@color/deepest_blue_theme"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvForgetpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="3dip"
                android:background="@color/transparent"
                android:text="@string/forget_pwd"
                android:visibility="invisible"
                android:textColor="@color/deepest_blue_theme"
                android:textSize="15sp" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/mTvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:textColor="@color/deep_blue_theme"/>

    <FrameLayout
        android:id="@+id/flyt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        ></FrameLayout>
</RelativeLayout>